Fix review + Copilot — connection lifecycle, JSON field mapping, Kafka dual listeners
- PostgresCampaignRepository: fresh connection per call, no stale connection risk,
  no AutoCloseable/shutdown hook needed, Array.free() after extraction,
  LinkedHashSet for duplicate-safe arrayToSet
- CachedCampaignRepository: synchronized refresh(), List.copyOf for immutability
- ClickHouse Kafka tables: camelCase columns to match Java JSON serialization,
  materialized views rename to snake_case, parseDateTimeBestEffort for ISO-8601,
  input_format_skip_unknown_fields for slotBids array
- Kafka dual listeners: INTERNAL (kafka:29092) for Docker network (ClickHouse),
  EXTERNAL (localhost:9092) for host (bidder app)
- Docs: complete 9-step test instructions, Kafka naming/listener explanations